; ModuleID = '/home/carl/AnghaBench/linux/arch/mips/mm/extr_uasm-mips.c___resolve_relocs.c'
source_filename = "/home/carl/AnghaBench/linux/arch/mips/mm/extr_uasm-mips.c___resolve_relocs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.uasm_reloc = type { i32, i32* }
%struct.uasm_label = type { i64 }

@.str = private unnamed_addr constant [42 x i8] c"Unsupported Micro-assembler relocation %d\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.uasm_reloc*, %struct.uasm_label*)* @__resolve_relocs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @__resolve_relocs(%struct.uasm_reloc* %0, %struct.uasm_label* %1) #0 {
  %3 = alloca %struct.uasm_reloc*, align 8
  %4 = alloca %struct.uasm_label*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64, align 8
  store %struct.uasm_reloc* %0, %struct.uasm_reloc** %3, align 8
  store %struct.uasm_label* %1, %struct.uasm_label** %4, align 8
  %7 = load %struct.uasm_label*, %struct.uasm_label** %4, align 8
  %8 = getelementptr inbounds %struct.uasm_label, %struct.uasm_label* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  store i64 %9, i64* %5, align 8
  %10 = load %struct.uasm_reloc*, %struct.uasm_reloc** %3, align 8
  %11 = getelementptr inbounds %struct.uasm_reloc, %struct.uasm_reloc* %10, i32 0, i32 1
  %12 = load i32*, i32** %11, align 8
  %13 = ptrtoint i32* %12 to i64
  store i64 %13, i64* %6, align 8
  %14 = load %struct.uasm_reloc*, %struct.uasm_reloc** %3, align 8
  %15 = getelementptr inbounds %struct.uasm_reloc, %struct.uasm_reloc* %14, i32 0, i32 0
  %16 = load i32, i32* %15, align 8
  switch i32 %16, label %28 [
    i32 128, label %17
  ]

17:                                               ; preds = %2
  %18 = load i64, i64* %5, align 8
  %19 = load i64, i64* %6, align 8
  %20 = add nsw i64 %19, 4
  %21 = sub nsw i64 %18, %20
  %22 = call i32 @build_bimm(i64 %21)
  %23 = load %struct.uasm_reloc*, %struct.uasm_reloc** %3, align 8
  %24 = getelementptr inbounds %struct.uasm_reloc, %struct.uasm_reloc* %23, i32 0, i32 1
  %25 = load i32*, i32** %24, align 8
  %26 = load i32, i32* %25, align 4
  %27 = or i32 %26, %22
  store i32 %27, i32* %25, align 4
  br label %33

28:                                               ; preds = %2
  %29 = load %struct.uasm_reloc*, %struct.uasm_reloc** %3, align 8
  %30 = getelementptr inbounds %struct.uasm_reloc, %struct.uasm_reloc* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 8
  %32 = call i32 @panic(i8* getelementptr inbounds ([42 x i8], [42 x i8]* @.str, i64 0, i64 0), i32 %31)
  br label %33

33:                                               ; preds = %28, %17
  ret void
}

declare dso_local i32 @build_bimm(i64) #1

declare dso_local i32 @panic(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
